Added logic to change-password